<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Music App</string>
    <string name="title_default">Music</string>
    <string name="detail_title">Song</string>
    <string name="artist_list_title">Artist</string>
    <string name="album_list_title">Album</string>

    <!--CONTENT DESCRIPTIONS-->
    <string name="cd_menu">Menu</string>
    <string name="cd_search">Search</string>
    <string name="cd_back">Back</string>
    <string name="cd_shuffle">Shuffle</string>
    <string name="cd_previous">Previous</string>
    <string name="cd_play">Play</string>
    <string name="cd_pause">Pause</string>
    <string name="cd_next">Next</string>
    <string name="cd_repeat">Repeat</string>
    <string name="cd_more">More</string>
    <string name="cd_playing">Playing</string>
    <string name="cd_empty">Empty List</string>
    <string name="cd_album">Album Art</string>
    <string name="cd_add_song_to_playlist">Add Song To Playlist</string>
    <string name="cd_add_song_to_favorites">Add Song To Favorites</string>

    <!--CATEGORIES/TABS-->
    <string name="cat_songs">Songs</string>
    <string name="cat_artists">Artists</string>
    <string name="cat_albums">Albums</string>

    <string name="empty_list">It seems that your library is empty.</string>
    <string name="add_media_btn">Add Music</string>

    <plurals name="number_of_songs">
        <item quantity="one">%d Song</item>
        <item quantity="other">%d Songs</item>
    </plurals>
    <plurals name="number_of_albums">
        <item quantity="one">%d Album</item>
        <item quantity="other">%d Albums</item>
    </plurals>
    <string name="artist_data"><xliff:g id="songs">%1$s</xliff:g> &#160;\u2014&#160; <xliff:g id="albums">%2$s</xliff:g></string>

</resources>
