<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParent"
    tools:context="com.danieldogeanu.android.musicalstructureapp.MainActivity">

    <LinearLayout
        android:id="@+id/header"
        style="@style/Header">

        <LinearLayout
            android:id="@+id/actionBar"
            style="@style/HeaderActionBar">

            <ImageButton
                android:id="@+id/menuBtn"
                android:contentDescription="@string/cd_menu"
                android:visibility="visible"
                app:srcCompat="@drawable/btn_menu"
                style="@style/HeaderActionButton" />

            <ImageButton
                android:id="@+id/backBtn"
                android:contentDescription="@string/cd_back"
                android:visibility="gone"
                app:srcCompat="@drawable/btn_back"
                style="@style/HeaderActionButton" />

            <TextView
                android:id="@+id/headerTitle"
                android:text="@string/title_default"
                style="@style/HeaderTitle" />

            <ImageButton
                android:id="@+id/searchBtn"
                android:contentDescription="@string/cd_search"
                app:srcCompat="@drawable/btn_search"
                style="@style/HeaderActionButton" />

        </LinearLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            style="@style/HeaderTabLayout" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:visibility="gone"
        style="@style/ViewPager" />

    <LinearLayout
        android:id="@+id/emptyList"
        android:visibility="visible"
        style="@style/EmptyListContainer">

        <ImageView
            android:contentDescription="@string/cd_empty"
            style="@style/EmptyListImage" />

        <TextView
            android:text="@string/empty_list"
            style="@style/EmptyListMessage" />

        <Button
            android:id="@+id/addMediaBtn"
            android:text="@string/add_media_btn"
            style="@style/EmptyListButton" />

    </LinearLayout>

    <LinearLayout
        style="@style/MediaControlsFragmentContainer">

        <fragment
            android:name="com.danieldogeanu.android.musicalstructureapp.MediaControlsFragment"
            android:id="@+id/mediaControlsFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>
